src/parser/TheLangParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g 2013-12-01 13:26:14

package parser;

import ast.*;
import ast.arith.*;
import ast.bool.*;
import ast.statement.*;
import ast.declaration.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class TheLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTEGER", "COMMENT", "LETTER", "WS", "'program'", "'end'", "'int'", "';'", "'['", "']'", "'low'", "'high'", "':='", "'skip'", "'read'", "'write'", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", "'|'", "'&'", "'true'", "'false'", "'='", "'<='", "'<'", "'>='", "'>'", "'!='", "'!'", "'('", "')'", "'+'", "'-'", "'*'", "'/'"
    };
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int IDENTIFIER=4;
    public static final int INTEGER=5;
    public static final int COMMENT=6;
    public static final int LETTER=7;
    public static final int WS=8;

    // delegates
    // delegators


        public TheLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TheLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TheLangParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g"; }



    // $ANTLR start "program"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:23:1: program returns [Program value] : 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF ) ;
    public final Program program() throws RecognitionException {
        Program value = null;

        Declaration d = null;

        Statement s = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:24:5: ( 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF ) )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:24:7: 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF )
            {
            match(input,9,FOLLOW_9_in_program54); if (state.failed) return value;
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:24:17: (d= declaration s= statement 'end' EOF | s= statement 'end' EOF )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==11||(LA1_0>=15 && LA1_0<=16)) ) {
                alt1=1;
            }
            else if ( (LA1_0==IDENTIFIER||(LA1_0>=18 && LA1_0<=21)||LA1_0==25) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:24:19: d= declaration s= statement 'end' EOF
                    {
                    pushFollow(FOLLOW_declaration_in_program60);
                    d=declaration();

                    state._fsp--;
                    if (state.failed) return value;
                    pushFollow(FOLLOW_statement_in_program64);
                    s=statement();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,10,FOLLOW_10_in_program66); if (state.failed) return value;
                    match(input,EOF,FOLLOW_EOF_in_program68); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new Program(d,s); 
                    }

                    }
                    break;
                case 2 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:25:9: s= statement 'end' EOF
                    {
                    pushFollow(FOLLOW_statement_in_program82);
                    s=statement();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,10,FOLLOW_10_in_program84); if (state.failed) return value;
                    match(input,EOF,FOLLOW_EOF_in_program86); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new Program(s); 
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "program"


    // $ANTLR start "declaration"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:29:1: declaration returns [Declaration value] : d= base_declaration (d= base_declaration )* ;
    public final Declaration declaration() throws RecognitionException {
        Declaration value = null;

        Declaration d = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:30:5: (d= base_declaration (d= base_declaration )* )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:30:7: d= base_declaration (d= base_declaration )*
            {
            pushFollow(FOLLOW_base_declaration_in_declaration118);
            d=base_declaration();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = d; 
            }
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:31:7: (d= base_declaration )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==11||(LA2_0>=15 && LA2_0<=16)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:31:9: d= base_declaration
            	    {
            	    pushFollow(FOLLOW_base_declaration_in_declaration135);
            	    d=base_declaration();

            	    state._fsp--;
            	    if (state.failed) return value;
            	    if ( state.backtracking==0 ) {
            	       value = new SeqDeclaration(value,d); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "declaration"


    // $ANTLR start "base_declaration"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:34:1: base_declaration returns [Declaration value] : ( (l= level 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) ) | 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) );
    public final Declaration base_declaration() throws RecognitionException {
        Declaration value = null;

        Token IDENTIFIER1=null;
        Token INTEGER2=null;
        Token IDENTIFIER3=null;
        Token INTEGER4=null;
        SecurityLevel l = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:35:5: ( (l= level 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) ) | 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=15 && LA5_0<=16)) ) {
                alt5=1;
            }
            else if ( (LA5_0==11) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:35:7: (l= level 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) )
                    {
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:35:7: (l= level 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) )
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:35:8: l= level 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' )
                    {
                    pushFollow(FOLLOW_level_in_base_declaration169);
                    l=level();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,11,FOLLOW_11_in_base_declaration177); if (state.failed) return value;
                    IDENTIFIER1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_base_declaration179); if (state.failed) return value;
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:36:24: ( ';' | '[' INTEGER ']' ';' )
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==12) ) {
                        alt3=1;
                    }
                    else if ( (LA3_0==13) ) {
                        alt3=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return value;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                        throw nvae;
                    }
                    switch (alt3) {
                        case 1 :
                            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:36:25: ';'
                            {
                            match(input,12,FOLLOW_12_in_base_declaration182); if (state.failed) return value;
                            if ( state.backtracking==0 ) {
                               value = new VariableDeclaration(l,IDENTIFIER1.getText()); 
                            }

                            }
                            break;
                        case 2 :
                            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:38:8: '[' INTEGER ']' ';'
                            {
                            match(input,13,FOLLOW_13_in_base_declaration199); if (state.failed) return value;
                            INTEGER2=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_base_declaration201); if (state.failed) return value;
                            match(input,14,FOLLOW_14_in_base_declaration203); if (state.failed) return value;
                            match(input,12,FOLLOW_12_in_base_declaration205); if (state.failed) return value;
                            if ( state.backtracking==0 ) {
                               value = new ArrayDeclaration(l,IDENTIFIER1.getText(), Integer.parseInt(INTEGER2.getText()));
                            }

                            }
                            break;

                    }


                    }


                    }
                    break;
                case 2 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:42:7: 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' )
                    {
                    match(input,11,FOLLOW_11_in_base_declaration239); if (state.failed) return value;
                    IDENTIFIER3=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_base_declaration241); if (state.failed) return value;
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:42:24: ( ';' | '[' INTEGER ']' ';' )
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==12) ) {
                        alt4=1;
                    }
                    else if ( (LA4_0==13) ) {
                        alt4=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return value;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }
                    switch (alt4) {
                        case 1 :
                            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:42:25: ';'
                            {
                            match(input,12,FOLLOW_12_in_base_declaration244); if (state.failed) return value;
                            if ( state.backtracking==0 ) {
                               value = new VariableDeclaration(IDENTIFIER3.getText()); 
                            }

                            }
                            break;
                        case 2 :
                            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:44:8: '[' INTEGER ']' ';'
                            {
                            match(input,13,FOLLOW_13_in_base_declaration261); if (state.failed) return value;
                            INTEGER4=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_base_declaration263); if (state.failed) return value;
                            match(input,14,FOLLOW_14_in_base_declaration265); if (state.failed) return value;
                            match(input,12,FOLLOW_12_in_base_declaration267); if (state.failed) return value;
                            if ( state.backtracking==0 ) {
                               value = new ArrayDeclaration(IDENTIFIER3.getText(), Integer.parseInt(INTEGER4.getText()));
                            }

                            }
                            break;

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "base_declaration"


    // $ANTLR start "level"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:49:1: level returns [SecurityLevel value] : ( 'low' | 'high' );
    public final SecurityLevel level() throws RecognitionException {
        SecurityLevel value = null;

        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:50:2: ( 'low' | 'high' )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==15) ) {
                alt6=1;
            }
            else if ( (LA6_0==16) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:50:4: 'low'
                    {
                    match(input,15,FOLLOW_15_in_level302); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = new SecurityLevelLow();
                    }

                    }
                    break;
                case 2 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:51:4: 'high'
                    {
                    match(input,16,FOLLOW_16_in_level309); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                      value = new SecurityLevelHigh();
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "level"


    // $ANTLR start "statement"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:53:1: statement returns [Statement value] : s= base_statement (s= base_statement )* ;
    public final Statement statement() throws RecognitionException {
        Statement value = null;

        Statement s = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:54:5: (s= base_statement (s= base_statement )* )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:54:7: s= base_statement (s= base_statement )*
            {
            pushFollow(FOLLOW_base_statement_in_statement329);
            s=base_statement();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = s; 
            }
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:55:7: (s= base_statement )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDENTIFIER||(LA7_0>=18 && LA7_0<=21)||LA7_0==25) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:55:9: s= base_statement
            	    {
            	    pushFollow(FOLLOW_base_statement_in_statement349);
            	    s=base_statement();

            	    state._fsp--;
            	    if (state.failed) return value;
            	    if ( state.backtracking==0 ) {
            	       value = new SeqStatement(value,s); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "statement"


    // $ANTLR start "base_statement"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:58:1: base_statement returns [Statement value] : (s= assignStmt | s= skipStmt | s= readStmt | s= writeStmt | s= ifStmt | s= whileStmt );
    public final Statement base_statement() throws RecognitionException {
        Statement value = null;

        Statement s = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:59:5: (s= assignStmt | s= skipStmt | s= readStmt | s= writeStmt | s= ifStmt | s= whileStmt )
            int alt8=6;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                alt8=1;
                }
                break;
            case 18:
                {
                alt8=2;
                }
                break;
            case 19:
                {
                alt8=3;
                }
                break;
            case 20:
                {
                alt8=4;
                }
                break;
            case 21:
                {
                alt8=5;
                }
                break;
            case 25:
                {
                alt8=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:59:7: s= assignStmt
                    {
                    pushFollow(FOLLOW_assignStmt_in_base_statement379);
                    s=assignStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 2 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:60:7: s= skipStmt
                    {
                    pushFollow(FOLLOW_skipStmt_in_base_statement393);
                    s=skipStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 3 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:61:7: s= readStmt
                    {
                    pushFollow(FOLLOW_readStmt_in_base_statement407);
                    s=readStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 4 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:62:7: s= writeStmt
                    {
                    pushFollow(FOLLOW_writeStmt_in_base_statement421);
                    s=writeStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 5 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:63:7: s= ifStmt
                    {
                    pushFollow(FOLLOW_ifStmt_in_base_statement435);
                    s=ifStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 6 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:64:7: s= whileStmt
                    {
                    pushFollow(FOLLOW_whileStmt_in_base_statement449);
                    s=whileStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "base_statement"


    // $ANTLR start "assignStmt"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:67:1: assignStmt returns [Statement value] : IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' ) ;
    public final Statement assignStmt() throws RecognitionException {
        Statement value = null;

        Token IDENTIFIER5=null;
        ArithExpr e = null;

        ArithExpr e1 = null;

        ArithExpr e2 = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:68:2: ( IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' ) )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:68:4: IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' )
            {
            IDENTIFIER5=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignStmt473); if (state.failed) return value;
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:68:15: ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==17) ) {
                alt9=1;
            }
            else if ( (LA9_0==13) ) {
                alt9=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:68:16: ':=' e= arith_expr ';'
                    {
                    match(input,17,FOLLOW_17_in_assignStmt476); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt480);
                    e=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_assignStmt482); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new AssignStatement(IDENTIFIER5.getText(), e); 
                    }

                    }
                    break;
                case 2 :
                    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:70:4: '[' e1= arith_expr ']' ':=' e2= arith_expr ';'
                    {
                    match(input,13,FOLLOW_13_in_assignStmt490); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt496);
                    e1=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,14,FOLLOW_14_in_assignStmt498); if (state.failed) return value;
                    match(input,17,FOLLOW_17_in_assignStmt499); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt503);
                    e2=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_assignStmt505); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new ArrayAssignStatement(IDENTIFIER5.getText(), e1, e2); 
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "assignStmt"


    // $ANTLR start "skipStmt"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:73:1: skipStmt returns [Statement value] : 'skip' ';' ;
    public final Statement skipStmt() throws RecognitionException {
        Statement value = null;

        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:74:2: ( 'skip' ';' )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:74:4: 'skip' ';'
            {
            match(input,18,FOLLOW_18_in_skipStmt523); if (state.failed) return value;
            match(input,12,FOLLOW_12_in_skipStmt525); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = new SkipStatement(); 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "skipStmt"


    // $ANTLR start "readStmt"
    // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:78:1: readStmt returns [Statement value] : 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' ) ;
    public final Statement readStmt() throws RecognitionException {
        Statement value = null;

        Token IDENTIFIER6=null;
        ArithExpr e = null;


        try {
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:79:2: ( 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' ) )
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:79:4: 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' )
            {
            match(input,19,FOLLOW_19_in_readStmt577); if (state.failed) return value;
            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_readStmt579); if (state.failed) return value;
            // E:\\codes\\github\\ProgramAnalysis\\program_analysis\\src\\parser\\TheLang.g:79:21: ( ';' | '[' e= arith_expr ']' ';' )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==12) ) {
                alt10=1;
